--- a/express/views/login.ejs
+++ b/express/views/login.ejs
@@ -1,19 +1,44 @@
-<html lang="en">
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
+<html>
 <head>
-  <title></title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
-</head>
+  <title>登陆</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
+ 
+	<link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/basic.css">
+    <script src="bootstrap/js/jquery-1.10.1.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
+
+   </head>
 <body>
-  <h2>login </h2>
-  <form action="/doLogin" method="POST">
-    <input type="text" name="username">
-    <input type="password" name="password">
-    <input type="submit" value="登陆">
-  </form>
-</body>
+<div class="container">
+    <div class="row">
+        <div class="col-md-offset-3 col-md-6">
+            <form class="form-horizontal" action="/dologin" method="POST">
+                <span class="heading">用户登录</span>
+                <div class="form-group">
+                    <input type="text" name="username" class="form-control" id="inputEmail3" placeholder="用户名">
+                    <i class="fa fa-user"></i>
+                </div>
+                <div class="form-group help">
+                    <input type="password" name="password" class="form-control" id="inputPassword3" placeholder="密码">
+                    <i class="fa fa-lock"></i>
+                    <a href="#" class="fa fa-question-circle"></a>
+                </div>
+                <div class="form-group">
+                    <div class="main-checkbox">
+                        <input type="checkbox" value="None" id="checkbox1" name="check"/>
+                        <label for="checkbox1"></label>
+                    </div>
+                    <span class="text">Remember me</span>
+                    <button type="submit" class="btn btn-default">登陆</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
+</body>
 </html>
