--- a/koa/views/admin/login.html
+++ b/koa/views/admin/login.html
@@ -48,7 +48,8 @@
 			$('#code').click(function () {
 				$(this).attr('src', '{{__HOST__}}/admin/login/code?id=' + Math.random() * 1000)
 			})
-			if ({{codeError}} === true) {
+			console.log('{{codeError}}')
+			if ('{{codeError}}' === true) {
 				$("#codeError").css('display','block')
 			}
 		})
