--- a/koa/views/admin/login.html
+++ b/koa/views/admin/login.html
@@ -48,10 +48,10 @@
 			$('#code').click(function () {
 				$(this).attr('src', '{{__HOST__}}/admin/login/code?id=' + Math.random() * 1000)
 			})
-			console.log('{{codeError}}')
-			if ('{{codeError}}' === true) {
-				$("#codeError").css('display','block')
-			}
+			// console.log('{{codeError}}')
+			// if ('{{codeError}}' === true) {
+			// 	$("#codeError").css('display','block')
+			// }
 		})
 	</script>
 </head>
@@ -79,7 +79,7 @@
 											<fieldset>
 												<label class="block clearfix">
 													<span class="block input-icon input-icon-right">
-														<input type="text" name="username" class="form-control" placeholder="用户名" />
+														<input type="text" name="username" class="form-control" value="{{uName}}" placeholder="用户名" />
 														<i class="icon-user"></i>
 													</span>
 												</label>
@@ -98,7 +98,9 @@
 														<img id="code" style="float:right;" src="{{__HOST__}}/admin/login/code" alt="">
 													</span>
 												</label>
-												<label id="codeError">验证码错误</label>
+												{{if codeError==true}}
+												<label style="color:#f00;">验证码错误</label>
+												{{/if}}
 												<div class="space"></div>
 
 												<div class="clearfix">
