--- a/koa/views/admin/public/slidebar.html
+++ b/koa/views/admin/public/slidebar.html
@@ -43,27 +43,23 @@
         <span class="menu-text"> 控制台 </span>
       </a>
     </li>
-
-
-
-    <li>
+    <li {{if G.urlParams[1] == 'manager'}} class="active open" {{/if}}>
       <a href="#" class="dropdown-toggle">
         <i class="icon-user-md"></i>
         <span class="menu-text"> 管理员管理 </span>
 
         <b class="arrow icon-angle-down"></b>
       </a>
-
       <ul class="submenu">
-        <li>
-          <a href="elements.html">
+        <li {{if !G.urlParams[2]}} class="active" {{/if}}>
+          <a href="{{__HOST__}}/admin/manager">
             <i class="icon-double-angle-right"></i>
             管理员列表
           </a>
         </li>
 
-        <li>
-          <a href="buttons.html">
+        <li {{if G.urlParams[2] == 'add'}} class="active" {{/if}}>
+          <a href="{{__HOST__}}/admin/manager/add">
             <i class="icon-double-angle-right"></i>
             增加管理员
           </a>
@@ -72,7 +68,6 @@
 
       </ul>
     </li>
-
     <li>
       <a href="#" class="dropdown-toggle">
         <i class="icon-list"></i>
@@ -97,7 +92,6 @@
         </li>
       </ul>
     </li>
-
     <li>
       <a href="#" class="dropdown-toggle">
         <i class="icon-edit"></i>
@@ -123,12 +117,6 @@
 
       </ul>
     </li>
-
-
-
-
-
-
     <li>
       <a href="#" class="dropdown-toggle">
         <i class="icon-picture"></i>
@@ -155,7 +143,6 @@
 
       </ul>
     </li>
-
     <li>
       <a href="#" class="dropdown-toggle">
         <i class="icon-paperclip"></i>
@@ -186,7 +173,6 @@
 
 
     </li>
-
     <li>
       <a href="#" class="dropdown-toggle">
         <i class="icon-list-alt"></i>
@@ -216,9 +202,6 @@
 
 
     </li>
-
-
-
     <li>
       <a href="index.html">
         <i class="icon-cog"></i>
