--- a/koa/views/test.html
+++ b/koa/views/test.html
@@ -44,19 +44,50 @@
       background: blue;
       margin-left: -200px;
     }
+
+    .content-box {
+      box-sizing: content-box;
+      -moz-box-sizing: content-box;
+      width: 100px;
+      height: 100px;
+      padding: 20px;
+      border: 5px solid #E6A43F;
+      background: blue;
+    }
+
+    .padding-box {
+      box-sizing: padding-box;
+      -moz-box-sizing: padding-box;
+      width: 100px;
+      height: 100px;
+      padding: 20px;
+      border: 5px solid #186645;
+      background: red;
+    }
+
+    .border-box {
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      width: 100px;
+      height: 100px;
+      padding: 20px;
+      border: 5px solid #3DA3EF;
+      background: yellow;
+    }
+  </style>
   </style>
 </head>
 
 <body>
 
-
-  <article class="container">
+  <div class="content-box">test</div>
+  <!-- <article class="container">
     <div class="center">
       <div class="inner">双飞翼布局</div>
     </div>
     <div class="left"></div>
     <div class="right"></div>
-  </article>
+  </article> -->
 
   <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
