--- a/koa/views/admin/manager/list.html
+++ b/koa/views/admin/manager/list.html
@@ -1,6 +1,4 @@
-﻿{{include "admin/public/htmlHeader.html"}}
-
-{{include "admin/public/navbar.html"}}
+﻿{{include "admin/public/htmlHeader.html"}} {{include "admin/public/navbar.html"}}
 
 <div class="main-container" id="main-container">
 	<script type="text/javascript">
@@ -61,19 +59,16 @@
 					<table id="sample-table-1" class="table table-striped table-bordered table-hover center">
 						<thead>
 							<tr>
-								<th class="center">
+								<!-- <th class="center">
 									<label>
 										<input type="checkbox" class="ace">
 										<span class="lbl"></span>
 									</label>
-								</th>
-								<th class="center">标题</th>
-								<th class="center">分类</th>
-								<th class="hidden-480 center">点击量</th>
-
+								</th> -->
+								<th class="center">管理员</th>
 								<th class="center">
 									<i class="icon-time bigger-110 hidden-480"></i>
-									增加时间
+									最后登录
 								</th>
 								<th class="center">状态</th>
 
@@ -82,122 +77,47 @@
 						</thead>
 
 						<tbody>
+							{{each managers}}
 							<tr class="">
-								<td class="center">
+								<!-- <td class="center">
 									<label>
 										<input type="checkbox" class="ace">
 										<span class="lbl"></span>
 									</label>
-								</td>
-
+								</td> -->
 								<td>
-									阿里内部的nodejs框架就是基于Koa
+									{{$value.userName}}
 								</td>
-								<td>$45</td>
-								<td class="hidden-480">3,330</td>
-								<td>Feb 12</td>
-
-								<td class="hidden-480">
-									<button class="btn btn-xs btn-success">
+								<td>
+									{{$value.loginDate | dateFormat}}
+								</td>
+								<td>
+									<!-- <button class="btn btn-xs btn-success">
 										<i class="icon-ok bigger-120 success"></i>
-									</button>
+									</button> -->
+									{{if $value.state}}
+									<img src="{{__HOST__}}/admin/assets/images/yes.gif" onclick="app.toggle(this,'admin','state','{{@$value._id}}')" /> {{else}}
+									<img src="{{__HOST__}}/admin/assets/images/no.gif" onclick="app.toggle(this,'admin','state','{{@$value._id}}')" /> {{/if}}
 								</td>
 
 								<td>
 									<div class="visible-md visible-lg hidden-sm hidden-xs btn-group center">
 
-
-										<button class="btn btn-xs btn-info">
-											<i class="icon-edit bigger-120"></i>
-										</button>
-										&nbsp;
-										<button class="btn btn-xs btn-danger">
-											<i class="icon-trash bigger-120"></i>
-										</button>
-
+										<a href="{{__HOST__}}/admin/manager/edit?id={{@$value._id}}">
+											<button style="float:left;" class="btn btn-xs btn-info">
+												<i class="icon-edit bigger-120"></i>
+											</button>
+										</a>
+										<a>
+											<button style="float:right;" class="btn btn-xs btn-danger">
+												<i class="icon-trash bigger-120"></i>
+											</button>
+										</a>
 									</div>
 
 								</td>
 							</tr>
-
-							<tr class="">
-								<td class="center">
-									<label>
-										<input type="checkbox" class="ace">
-										<span class="lbl"></span>
-									</label>
-								</td>
-
-								<td>
-									Font Awesome,一套绝佳的图标字体库和CSS框架
-								</td>
-								<td>$45</td>
-								<td class="hidden-480">3,330</td>
-								<td>Feb 12</td>
-
-								<td class="hidden-480">
-									<button class="btn btn-xs btn-success">
-										<i class="icon-ok bigger-120"></i>
-									</button>
-								</td>
-
-								<td>
-									<div class="visible-md visible-lg hidden-sm hidden-xs btn-group center">
-
-
-										<button class="btn btn-xs btn-info">
-											<i class="icon-edit bigger-120"></i>
-										</button>
-										&nbsp;
-										<button class="btn btn-xs btn-danger">
-											<i class="icon-trash bigger-120"></i>
-										</button>
-
-									</div>
-
-								</td>
-							</tr>
-
-
-							<tr class="">
-								<td class="center">
-									<label>
-										<input type="checkbox" class="ace">
-										<span class="lbl"></span>
-									</label>
-								</td>
-
-								<td>
-									Koa是Express原班人马打造，号称下一代web框架
-								</td>
-								<td>$45</td>
-								<td class="hidden-480">3,330</td>
-								<td>Feb 12</td>
-
-								<td class="hidden-480">
-									<button class="btn btn-xs btn-success">
-										<i class="icon-ok bigger-120"></i>
-									</button>
-								</td>
-
-								<td>
-									<div class="visible-md visible-lg hidden-sm hidden-xs btn-group center">
-
-
-										<button class="btn btn-xs btn-info">
-											<i class="icon-edit bigger-120"></i>
-										</button>
-										&nbsp;
-										<button class="btn btn-xs btn-danger">
-											<i class="icon-trash bigger-120"></i>
-										</button>
-
-									</div>
-
-								</td>
-							</tr>
-
-
+							{{/each}}
 						</tbody>
 					</table>
 				</div>
@@ -218,7 +138,6 @@
 
 
 {{include "admin/public/foot.html"}}
-
 </body>
 
 </html>
