--- a/koa/views/admin/public/foot.html
+++ b/koa/views/admin/public/foot.html
@@ -23,7 +23,7 @@
 
 <script src="{{__HOST__}}/admin/assets/js/ace-elements.min.js"></script>
 <script src="{{__HOST__}}/admin/assets/js/ace.min.js"></script>
-
+<script src="{{__HOST__}}/admin/assets/base.js"></script>
 
 <script type="text/javascript">
 	jQuery(function ($) {
