--- a/koa/views/admin/manager/list.html
+++ b/koa/views/admin/manager/list.html
@@ -108,7 +108,7 @@
 												<i class="icon-edit bigger-120"></i>
 											</button>
 										</a>
-										<a>
+										<a href="{{__HOST__}}/admin/manager/delete?id={{@$value._id}}">
 											<button style="float:right;" class="btn btn-xs btn-danger">
 												<i class="icon-trash bigger-120"></i>
 											</button>
