--- a/koa/views/admin/public/navbar.html
+++ b/koa/views/admin/public/navbar.html
@@ -24,7 +24,7 @@
             <img class="nav-user-photo" src="{{__HOST__}}/admin/assets/avatars/user.jpg" alt="Jason's Photo" />
             <span class="user-info">
               <small>欢迎光临,</small>
-              {{G.userinfo.userName}}
+              <!-- {{(G && G.userinfo && G.userinfo.userName) || ''}} -->
             </span>
 
             <i class="icon-caret-down"></i>
