--- a/koa/views/admin/public/slidebar.html
+++ b/koa/views/admin/public/slidebar.html
@@ -77,14 +77,14 @@
 
       <ul class="submenu">
         <li>
-          <a href="tables.html">
+          <a href="{{__HOST__}}/admin/articlecate">
             <i class="icon-double-angle-right"></i>
             分类列表
           </a>
         </li>
 
         <li>
-          <a href="jqgrid.html">
+          <a href="{{__HOST__}}/admin/articlecate/add">
             <i class="icon-double-angle-right"></i>
             增加分类
           </a>
